Partial fix for #6 on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -225,6 +225,11 @@ table {
 .fullheight {
   height: 100%;
 }
+@media (max-width: 767px) {
+  .fullheight {
+    height: auto;
+  }
+}
 
 .flexboxlayout {
   display: -webkit-flex;
